# httpsegmenter

./: .gitignore  CMakeLists.txt  Makefile  README.md  detectFFMpeg.cmake  hs_config.rb  hs_encoder.rb  hs_transfer.rb  http_streamer.rb  live_segmenter.c  options_parsing.c  segmenter.c  segmenter.h
example-configs/: config-luma.yml  config-multirate.yml  config-recommended-ipad-16x9-multirate.yml  config-recommended-ipad-4x3-multirate.yml  config-recommended-ipad-multirate.yml  config-recommended-iphone-16x9-multirate.yml  config-recommended-iphone-4x3-multirate.yml  config-recommended-iphone-multirate.yml  config-restream-multirate.yml  config-restream-simple.yml  config-simple.yml
